--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,190 @@ header .fa-bars {
   text-transform: none;
 }
 
+/* service section */
+
+.service {
+  width: 100%;
+  min-height: 100vh;
+  background: url(../img/taxi_road.jpg) no-repeat center/cover;
+}
+
+.service .box-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.service .box-container .box {
+  flex: 1 1 40rem;
+  padding: 2rem 1rem;
+  text-align: center;
+  background: #fff;
+  margin: 2rem;
+  border: 0.2rem solid var(--yellow);
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.service .box-container .box:hover {
+  transform: translateY(-0.8rem);
+}
+
+.service .box-container .box i {
+  width: 4rem;
+  height: 4rem;
+  background: var(--yellow);
+  line-height: 4rem;
+  font-size: 2.5rem;
+  margin-bottom: 1.5rem;
+  border-radius: 50%;
+}
+
+.service .box-container .box h3 {
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+}
+
+.service .box-container .box p {
+  font-size: 1.5rem;
+}
+
+/* cars section */
+
+.cars {
+  background: #222;
+  min-height: 100vh;
+}
+
+.cars .heading {
+  color: #fff;
+}
+
+.cars .box-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.cars .box-container .box {
+  flex: 1 1 25rem;
+  padding: 2rem 1rem;
+  color: #fff;
+}
+
+.cars .box-container .box h3 {
+  font-size: 3rem;
+  margin-bottom: 1.5rem;
+}
+
+.cars .box-container .box img {
+  width: 30rem;
+}
+
+.cars .box-container .box h4 {
+  font-size: 2.5rem;
+  margin-bottom: 1.5rem;
+  margin-top: 2rem;
+}
+
+.cars .box-container .box ul li {
+  line-height: 1.5;
+  font-size: 1.8rem;
+  list-style: circle;
+}
+
+/* contacts section */
+
+.contacts {
+  min-height: 100vh;
+  padding: 0rem 0rem 3rem;
+}
+
+.contacts .heading {
+  margin-bottom: 3rem;
+}
+
+.contacts .box-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.contacts .box-container .content {
+  flex: 1 1 40rem;
+  padding: 2rem 1rem;
+  margin: 2rem;
+}
+
+.contacts .box-container .content h3 {
+  font-size: 2.5rem;
+  color: var(--yellow);
+}
+
+.contacts .box-container .content h2 {
+  font-size: 3.5rem;
+  font-weight: 800;
+}
+
+.contacts .box-container .content p {
+  font-size: 1.8rem;
+  margin: 2rem 0;
+}
+
+.contacts .box-container .form {
+  flex: 1 1 40rem;
+  padding: 2rem 2.5rem;
+  background-color: #222;
+  border-radius: 0.8rem;
+}
+
+.contacts .box-container .form input,
+.contacts .box-container .form textarea {
+  width: 100%;
+  margin: 1rem 0;
+  padding: 2rem 1rem;
+}
+
+.contacts .box-container .form textarea {
+  height: 15rem;
+  resize: none;
+}
+
+/* footer section */
+
+.footer {
+  width: 100%;
+  height: 8rem;
+  background-color: #222;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer .social-media {
+  font-size: 2.5rem;
+  color: #fff;
+}
+
+.footer .social-media i {
+  margin: 0rem 1.5rem;
+  transition: 0.3s;
+}
+
+.footer .social-media i:hover {
+  color: var(--yellow);
+  cursor: pointer;
+}
+
 /* media queries */
 
 @media (max-width: 768px) {
